added ruby code and it prints birhtday date

--- a/views/enter_birthday.erb
+++ b/views/enter_birthday.erb
@@ -6,9 +6,9 @@
     <input type="text" name="Name" value="Phil">
 
   <h2>When's your birthday?</h2>
-      Day:
-        <input type="number" name="Day" value="10">
-      Month
+    Day:
+  <input type="number" name="Day" value="10">
+    Month:
       <select name ="Month">
         <option value="January">January</option>
         <option value="February">February</option>
