--- a/views/result.erb
+++ b/views/result.erb
@@ -2,5 +2,11 @@
 
 <center>
   <h1>Hello <%= @name %></h1>
-  <h1>Your Birthday is on <%= @date.birthday %> </h1>
+
+  <% if @date.birthday_today? %>
+  <h1><%= "Your Birthday is today!" %></h1>
+  <% else %>
+  <h1><%= @date.calculation %> Days until your birthday</h1>
+  <% end %>
+  
 </center>
