--- a/views/enter_birthday.erb
+++ b/views/enter_birthday.erb
@@ -1,4 +1,4 @@
-<body style="background-color:#EC4848;">
+<body style="background-color:#87CEFA;">
 <center>
   <h1>Hello there!</h1>
   <h2>What is you name?</h2>
