--- a/views/result.erb
+++ b/views/result.erb
@@ -1,4 +1,4 @@
-<body style="background-color:#EC4848;">
+<body style="background-color:#87CEFA;">
 
 <center>
   <h1>Hello <%= @name %></h1>
@@ -8,5 +8,5 @@
   <% else %>
   <h1><%= @date.calculation %> Days until your birthday</h1>
   <% end %>
-  
+
 </center>
